--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist -r https://github.com/<USERNAME>/<REPO_NAME>.git"
+    "deploy": "vite build && gh-pages -d dist -r https://github.com/bojadlabalaji/Cyber-Intellect.git"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
